--- a/javascript_math.html
+++ b/javascript_math.html
@@ -10,7 +10,7 @@
         console.log(Math.ceil(13.52));
         console.log(Math.floor(12.345));
         console.log(Math.random());
-        console.log(Math);
+        console.log(Math.floor(Math.random()*10000));
     </script>
 </head>
 <body>
